--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,40 @@
 
     <display-name>SpringMVCDemo Web Application</display-name>
 
+
+
+<!--    <filter>
+
+        <description>延长hibernate中session的生命周期OpenSessionInViewFilter配置: (此监听器应该在struts2的监听器前面)</description>
+        <filter-name>OpenSessionInView</filter-name>
+        <filter-class>
+            org.springframework.orm.hibernate5.support.OpenSessionInViewFilter
+        </filter-class>
+        <init-param>
+            <param-name>singleSession</param-name>
+            <param-value>true</param-value>  &lt;!&ndash; 默认为true &ndash;&gt;
+        </init-param>
+
+    </filter>
+    <filter-mapping>
+        <filter-name>OpenSessionInView</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <servlet>
         <servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -13,10 +47,27 @@
     </servlet>
 
     <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.css</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.png</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
         <servlet-name>mvc-dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+
+
+
+
+    <!-- <context-param>
+         <param-name>contextConfigLocation</param-name>
+         <param-value>classpath:spring-quartz2.xml</param-value>
+     </context-param>-->
     <filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
