--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,46 @@
             <artifactId>json</artifactId>
             <version>20180130</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>com.infiniteautomation</groupId>-->
+            <!--<artifactId>modbus4j</artifactId>-->
+            <!--<version>2.0.2</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.serotonin</groupId>-->
+            <!--<artifactId>modbus4j</artifactId>-->
+            <!--<version>1.0</version>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>com.serotonin</groupId>
+            <artifactId>seroUtils</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/gnu.io/rxtx -->
+        <dependency>
+            <groupId>gnu.io</groupId>
+            <artifactId>rxtx</artifactId>
+            <version>2.1.7</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>wind5</finalName>
